// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional_complex_property test_optional_complex_property_not_templated 1`] = `
Object {
  "json": Object {
    "property": Object {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_complex_property test_optional_complex_property_not_templated 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link 1`] = `
Object {
  "json": Object {
    "link": "https://ya.ru",
    "property": Object {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {
    "link": "https://ya.ru",
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link_missing_data 1`] = `
Object {
  "json": Object {
    "property": Object {},
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link_missing_data 2`] = `Array []`;

exports[`optional_complex_property test_optional_complex_property_with_internal_link_override_in_template 1`] = `
Object {
  "json": Object {
    "link_override": "https://ya.ru",
    "property": Object {
      "value": "https://ya.ru",
    },
    "type": "t_0",
  },
  "templateContext": Object {
    "link_override": "https://ya.ru",
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_with_link 1`] = `
Object {
  "json": Object {
    "link": Object {
      "value": "https://ya.ru",
    },
    "property": Object {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {
    "link": Object {
      "value": "https://ya.ru",
    },
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_with_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_complex_property test_optional_complex_property_with_link_missing_data 2`] = `Array []`;

exports[`optional_complex_property test_optional_complex_property_with_override_in_template 1`] = `
Object {
  "json": Object {
    "link_override": Object {
      "value": "https://ya.ru",
    },
    "property": Object {
      "value": "https://ya.ru",
    },
    "type": "t_0",
  },
  "templateContext": Object {
    "link_override": Object {
      "value": "https://ya.ru",
    },
  },
}
`;

exports[`optional_complex_property test_optional_complex_property_without_link 1`] = `
Object {
  "json": Object {
    "property": Object {
      "value": "https://ya.ru",
    },
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_complex_property test_optional_complex_property_without_link_missing_data 1`] = `
Object {
  "json": Object {
    "property": Object {},
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_complex_property test_optional_invalid_complex_property_not_templated 1`] = `
Object {
  "json": Object {
    "property": Object {},
    "type": "entity_with_optional_complex_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_complex_property test_optional_invalid_complex_property_not_templated 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;
